# rip-bot

./: mypy.ini  pyproject.toml  setup.cfg
rip_bot/: bot_client.py  config.py  main.py
rip_bot/bot/: __init__.py  bot.py  client.py
rip_bot/bot/commands/: horizon_ot.py
rip_bot/database/: __init__.py  client.py
rip_bot/jobs/: __init__.py  command_scheduler.py  horizon_ot_scheduler.py
rip_bot/models/: __init__.py  horizon_ot_model.py  horizon_ot_models.py
rip_bot/repository/: __init__.py  horizon_ot_repository.py  schedulers_repository.py
rip_bot/scraping/: __init__.py  client.py  horizonot.py  types.py
rip_bot/utils/: log.py
