[tool.poetry]
name = "rip-bot"
version = "0.1.0"
description = ""
authors = ["Tauã Gomes de Almeida <tauan96@gmail.com>"]
readme = "README.md"
packages = [{include = "rip_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
discord = "^2.3.2"
python-dotenv = "^1.0.0"
httpx = "^0.24.1"
beautifulsoup4 = "^4.12.2"
html5lib = "^1.1"
rich = "^13.5.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.5.1"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
